# litterTCP

./: CMakeLists.txt  k.sh
include/: port.h
lib/include/: heap.h
lib/src/: heap.c
linux_tcp/: tcp_handle.c
src/: litterTCP.c
